--- a/FriendFinder/package.json
+++ b/FriendFinder/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "heroku": "^7.33.1"
+    "express": "^4.17.1"
   }
 }
